--- a/cluster_models/model1/cluster_model1.Rmd
+++ b/cluster_models/model1/cluster_model1.Rmd
@@ -9,13 +9,16 @@ Now i have generated my data and want to analyze them. First I have to order the
 ```{r}
 
 #Set the working directory - I connect it directly with the output file on the server. 
-#setwd("/tmp/server_data_model1")
+setwd("/tmp/server_data_model1")
 
 #Now for model 1 but with recombination rate of 1e-6
 #setwd("/tmp/server_data_1e-6_model1")
 
 #And again for another recombination rate: 1e-8
-setwd("/tmp/server_data_1e-8_model1")
+#setwd("/tmp/server_data_1e-8_model1")
+
+#And again for another recombination rate: 1e-9
+#setwd("/tmp/server_data_1e-9_model1")
 
 rm(list=ls(all=TRUE)) #clear R environment
 
@@ -157,7 +160,7 @@ matpoints( x_values, results_df_r, pch = 16, cex = 0.4, col = adjustcolor("tan1"
 # adding Mean relatedness lines to the plot
 lines( x_values, mean_nrnr, col = "#54BFB7FF", lwd = 2.5)
 lines( x_values, mean_nrr, col = "#894B33FF", lwd = 2.5)
-lines( x_values, mean_r, col = "tan1", lwd = 2)
+lines( x_values, mean_r, col = "tan1", lwd = 2.5)
 
 #create a legend for my plot
 legend("topright", legend=c("non-random non-related", "non-random related", "random"), col=c("#54BFB7FF", "#894B33FF", "tan1"), lty=1, cex = 0.7)
@@ -180,7 +183,7 @@ matplot(x_values[idx], results_df_nrnr[idx, ], type = "p", pch = 16, cex = 0.6,
         col = adjustcolor("#54BFB7FF", alpha.f = 0.3),
         xlab = "Generation", ylab = "Heterozygosity",
         ylim = c(0, 0.004),                              # same y-axis as before
-        main = "Heterozygosity: First 100 Generations")
+        main = "Heterozygosity: First 80 Generations")
 
 # add the other two models
 matpoints(x_values[idx], results_df_nrr[idx, ], pch = 16, cex = 0.6,
@@ -220,12 +223,14 @@ med_r    <- apply(results_df_r,    1, median, na.rm = TRUE)
 p25_r    <- apply(results_df_r,    1, function(x) quantile(x, 0.25, na.rm = TRUE))
 p75_r    <- apply(results_df_r,    1, function(x) quantile(x, 0.75, na.rm = TRUE))
 
+# Create a vector for the x-values (generations) - this will be used for the x axis of the plot. 
+x_values <- seq(2, 1000, by = 5)
 
 #Make a plot with the median and the 25/75% as dashed lines
 
 plot(x_values, med_nrnr, type = "n",
      xlab = "Generation", ylab = "Heterozygosity",
-     ylim = c(0, 0.004),
+     ylim = c(0, 0.005),
      main = "Heterozygosity over Generations\n(median & 25/75%)")
 
 
@@ -257,5 +262,39 @@ legend("topright", #where
        lty    = c(1, 2, 1, 2, 1, 2),
        lwd    = c(2.5, 1.5, 2.5, 1.5, 2.5, 1.5),
        cex    = 0.7) #size
+```
+
+
+Now generate a plot without the points
+
+```{r}
+#install.packages("paletteer")
+library(paletteer)
+
+
+#find the highest and lowest heterozygosity values across all three matrices. This will help me with the y axis of the plot i want to generate. 
+max_het <- max(results_df_nrnr, results_df_nrr, results_df_r)
+min_het <- min(results_df_nrnr, results_df_nrr, results_df_r)
+
+# Create a vector for the x-values (generations) - this will be used for the x axis of the plot. 
+x_values <- seq(2, 1000, by = 5)
+
+#Here i don't have to transpose the data, since each column is a separate data series - this is what matplot expects. 
+#change here the main if looking at another recombination rate
+matplot( x_values, mean_nrnr, col = "#54BFB7FF", lwd = 2.5, lty = 1, type = "n",
+        xlab = "Generation", ylab = "Heterozygosity", #name the axis
+        ylim = c(0,0.005), main = "Heterozygosity over Generations (1e-7)")  #define the y axis and give the plot a title 
+
+
+# adding Mean relatedness lines to the plot
+lines( x_values, mean_nrnr, col = "#54BFB7FF", lwd = 2.5)
+lines( x_values, mean_nrr, col = "#894B33FF", lwd = 2.5)
+lines( x_values, mean_r, col = "tan1", lwd = 2.5)
+
+#create a legend for my plot
+legend("topright", legend=c("non-random non-related", "non-random related", "random"), col=c("#54BFB7FF", "#894B33FF", "tan1"), lty=1, cex = 0.7)
+#cex = 0.7 makes the legend smaller, lty is for the lines
+
+
 ```
 
